downgraded jvm to java 17 for deployment target